--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,10 @@
         "lucide-react": "^0.469.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-hook-form": "^7.71.1",
         "react-hot-toast": "^2.4.1",
         "react-router-dom": "^7.1.1",
+        "react-to-print": "^3.2.0",
         "recharts": "^3.7.0",
         "socket.io-client": "^4.8.3",
         "stream-chat": "^8.45.0",
