--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,10 @@
         "@stream-io/video-react-sdk": "^1.8.2",
         "@tanstack/react-query": "^5.64.2",
         "axios": "^1.7.9",
+        "browserify-zlib": "^0.2.0",
+        "buffer": "^6.0.3",
         "lucide-react": "^0.469.0",
+        "process": "^0.11.10",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-hook-form": "^7.71.1",
@@ -22,7 +25,9 @@
         "react-router-dom": "^7.1.1",
         "react-to-print": "^3.2.0",
         "recharts": "^3.7.0",
+        "simple-peer": "^9.11.1",
         "socket.io-client": "^4.8.3",
+        "stream-browserify": "^3.0.0",
         "stream-chat": "^8.45.0",
         "stream-chat-react": "^12.8.0",
         "tldraw": "^4.3.1"
@@ -34,6 +39,7 @@
         "autoprefixer": "^10.4.20",
         "postcss": "^8.4.49",
         "tailwindcss": "^3.4.17",
+        "util": "^0.12.5",
         "vite": "^6.0.7"
     }
 }
