--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
         "react-dom": "^18.3.1",
         "react-hook-form": "^7.71.1",
         "react-hot-toast": "^2.4.1",
+        "react-markdown": "^10.1.0",
         "react-router-dom": "^7.1.1",
         "react-to-print": "^3.2.0",
         "recharts": "^3.7.0",
