--- a/backend/package.json
+++ b/backend/package.json
@@ -13,14 +13,20 @@
     "@stream-io/node-sdk": "^0.4.2",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
+    "express-rate-limit": "^8.2.1",
+    "express-validator": "^7.3.1",
+    "helmet": "^8.1.0",
     "inngest": "^3.27.6",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.9.5",
+    "openai": "^6.21.0",
     "socket.io": "^4.8.3",
     "stream-chat": "^8.45.0",
-    "svix": "^1.42.0"
+    "svix": "^1.42.0",
+    "winston": "^3.19.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
